Change image links to GitHub image sources

--- a/googlehomepage.html
+++ b/googlehomepage.html
@@ -14,16 +14,16 @@
           <li>+Erin</li>
           <li>Gmail</li>
           <li>Images</li>
-          <li><img src="notifs.png"></li>
-          <li><img src="bell.png"></li>
+          <li><img src="https://cloud.githubusercontent.com/assets/6102148/5114548/696324a2-6fee-11e4-98bf-adb3c441f0d2.png"></li>
+          <li><img src="https://cloud.githubusercontent.com/assets/6102148/5114543/67627cc0-6fee-11e4-9269-3368e0c6da9e.png"></li>
           <li><span id="share">Share</span></a></li>
-          <li><img src="profile-photo.png"></li>
+          <li><img src="https://cloud.githubusercontent.com/assets/6102148/5114549/6a42cb84-6fee-11e4-9787-43e5da7caa5d.png"></li>
         </ul>
       </div>
     </div>
     
     <div id="main">
-      <img id="logo" src="google-logo.png" alt="Google logo">
+      <img id="logo" src="https://cloud.githubusercontent.com/assets/6102148/5114546/687b74b8-6fee-11e4-9685-3843f1649701.png" alt="Google logo">
       <form>
         <input type="text">
         <div id="buttons">
