Corrected image sources

--- a/googlehomepage.html
+++ b/googlehomepage.html
@@ -14,16 +14,16 @@
           <li>+Erin</li>
           <li>Gmail</li>
           <li>Images</li>
-          <li><img src="notifs.png"></li>
-          <li><img src="bell.png"></li>
+          <li><img src="images/notifs.png"></li>
+          <li><img src="images/bell.png"></li>
           <li><span id="share">Share</span></a></li>
-          <li><img src="profile-photo.png"></li>
+          <li><img src="images/profile-photo.png"></li>
         </ul>
       </div>
     </div>
     
     <div id="main">
-      <img id="logo" src="google-logo.png" alt="Google logo">
+      <img id="logo" src="images/google-logo.png" alt="Google logo">
       <form>
         <input type="text">
         <div id="buttons">
